--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
 [submodule "ext/tinydtls"]
 	path = ext/tinydtls
-	url = https://git.eclipse.org/r/tinydtls/org.eclipse.tinydtls
-    ignore = dirty
+	url = git@github.com:gkincses-yolk/tinydtls.git
